--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:fbutton="http://schemas.android.com/apk/res-auto"
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -31,7 +32,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:navGraph="@navigation/mobile_navigation" />
 
-    <Button
+    <com.example.androiddemo.widget.FButton
         android:id="@+id/button3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -39,7 +40,12 @@
         android:onClick="doGet"
         tools:layout_editor_absoluteX="159dp"
         tools:layout_editor_absoluteY="166dp"
-        tools:ignore="MissingConstraints" />
+        tools:ignore="MissingConstraints"
+        fbutton:buttonColor="@color/color_concrete"
+        fbutton:shadowColor="@color/color_asbestos"
+        fbutton:shadowEnabled="true"
+        fbutton:shadowHeight="5dp"
+        fbutton:cornerRadius="5dp" />
     
     <ImageView
         android:id="@+id/imageView5"
@@ -48,4 +54,5 @@
         app:srcCompat="@drawable/picture1"
         tools:layout_editor_absoluteX="32dp"
         tools:layout_editor_absoluteY="270dp" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
